2-traffic-management/route-headers/frontv2-virtual-service-firefox.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-end
  namespace: sock-shop
spec:
  hosts:
  - "*"
  gateways:
  - sockshop-gateway
  http:
  - match:
    - headers:
        user-agent:
          regex: '.*Firefox.*'
    route:    
    - destination:
        host: front-end
        subset: v2
  - route:
    - destination:
        host: front-end
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: front-end
  namespace: sock-shop
spec:
  host: front-end
  subsets:
  - name: v1
    labels:
      version: v1
      name: front-end
  - name: v2
    labels:
      version: v2
      name: front-end
